# crewtest0

test0/: CrewTest0.ipynb  LangChainAgent0.ipynb  README.md  pyproject.toml  report.md
test0/src/test0/: crew.py  main.py
test0/src/test0/config/: tasks.yaml
test0/src/test2/: crew.py  main.py  raw.py
test0/src/test2/config/: agents.yaml  tasks.yaml
test0/src/test2/tools/: custom_tool.py
test1/: README.md  pyproject.toml
test1/src/: CrewTest1.ipynb  report.md
test1/src/test1/: crew.py  main.py
test1/src/test1/config/: tasks.yaml
